# cannabis-directory

./: .dockerignore  .gitignore
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/data/: strains_raw.csv
backend/src/backend/: data.py  main.py  operations.py
backend/tests/: search_comparison.py  test_data.py
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.json
frontend/data/: enriched_accounts.json
frontend/src/: App.jsx  App.tsx  FetchApiData.jsx  StrainTable.css  StrainTable.jsx  StrainTable.tsx  TailwindStyles.jsx  fetchBackendData.ts
frontend/src/assets/: cannabis-leaf.avif
old/: App.tsx
old/components/: FileReadWrite.tsx  SortButton.tsx  StrainTable.tsx
old/utils/: FetchBackendData.tsx
