[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kyle Marden <kyle.marden@yahoo.co.uk>"]
readme = "README.md"
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.0"
fastapi = "^0.115.5"
icecream = "^2.1.3"
pytest = "^8.3.4"
loguru = "^0.7.2"
pandas = "^2.2.3"
psycopg2-binary = "^2.9.10"
ptpython = "^3.0.29"
black = "^24.10.0"
fastapi-middleware = "^0.2.1"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
